# rs_cli

./: .gitignore  README.md
grrs/: Cargo.toml
grrs/.devcontainer/: Dockerfile  devcontainer.json
grrs/src/: finder.rs  lib.rs  main.rs
grrs/src/helpers/: finder.rs
grrs/tests/: cli.rs  grrs.rs
