[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "tests/cli.rs"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"